--- a/references.bib
+++ b/references.bib
@@ -738,6 +738,18 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Cobo et al_2007_Statistical Reviewers Improve Reporting in Biomedical Articles.pdf}
 }
 
+@misc{CocreationCodesignCoproduction2022,
+  title = {Co-Creation, Co-Design, Co-Production for Public Health -- a Perspective on Definitions and Distinctions - {{June}} 2022, {{Volume}} 32, {{Issue}} 2 {\textbar} {{PHRP}}},
+  year = {2022},
+  month = jun,
+  journal = {https://www.phrp.com.au/},
+  doi = {10.17061/phrp3222211},
+  urldate = {2024-09-04},
+  abstract = {The paper defines the terms co-creation, co-design and co-production as they are used in public health, outlining distinctions between them.},
+  langid = {american},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/2022_Co-creation, co-design, co-production for public health – a perspective on.pdf}
+}
+
 @article{collinsTransparentReportingMultivariable2015,
   title = {Transparent Reporting of a Multivariable Prediction Model for Individual Prognosis or Diagnosis ({{TRIPOD}}): The {{TRIPOD Statement}}},
   shorttitle = {Transparent Reporting of a Multivariable Prediction Model for Individual Prognosis or Diagnosis ({{TRIPOD}})},
@@ -1572,6 +1584,23 @@
   file = {/Users/james/Zotero/storage/CWBSXNFP/Hopewell et al_2016_Impact of a web-based tool (WebCONSORT) to improve the reporting of randomised.pdf;/Users/james/Zotero/storage/ZK3NGUZ5/s12916-016-0736-x.html}
 }
 
+@article{hopewellUpdateSPIRITCONSORT2022,
+  title = {An Update to {{SPIRIT}} and {{CONSORT}} Reporting Guidelines to Enhance Transparency in Randomized Trials},
+  author = {Hopewell, Sally and Boutron, Isabelle and Chan, An-Wen and Collins, Gary S. and {de Beyer}, Jennifer A. and Hr{\'o}bjartsson, Asbj{\o}rn and Nejstgaard, Camilla Hansen and {\O}stengaard, Lasse and Schulz, Kenneth F. and Tunn, Ruth and Moher, David},
+  year = {2022},
+  month = sep,
+  journal = {Nature Medicine},
+  volume = {28},
+  number = {9},
+  pages = {1740--1743},
+  issn = {1546-170X},
+  doi = {10.1038/s41591-022-01989-8},
+  langid = {english},
+  pmid = {36109642},
+  keywords = {Checklist,Publishing,Randomized Controlled Trials as Topic,Research Design},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Hopewell et al_2022_An update to SPIRIT and CONSORT reporting guidelines to enhance transparency in.pdf}
+}
+
 @article{howellEffectSQUIREStandards2015,
   title = {The Effect of the {{SQUIRE}} ({{Standards}} of {{QUality Improvement Reporting Excellence}}) Guidelines on Reporting Standards in the Quality Improvement Literature: A before-and-after Study},
   shorttitle = {The Effect of the {{SQUIRE}} ({{Standards}} of {{QUality Improvement Reporting Excellence}}) Guidelines on Reporting Standards in the Quality Improvement Literature},
@@ -2030,6 +2059,21 @@
   doi = {10.1073/pnas.2103238118},
   keywords = {_tablet},
   file = {/Users/james/Zotero/storage/BPM5C8HK/Macleod et al_2021_The MDAR (Materials Design Analysis Reporting) Framework for transparent.pdf;/Users/james/Zotero/storage/GUE9S2A8/MDAR author and editor survey responses.pptx;/Users/james/Zotero/storage/RXE3YE2Z/Macleod et al_2021_The MDAR (Materials Design Analysis Reporting) Framework for transparent.pdf}
+}
+
+@incollection{magaldiSemistructuredInterviews2020,
+  title = {Semi-Structured {{Interviews}}},
+  booktitle = {Encyclopedia of {{Personality}} and {{Individual Differences}}},
+  author = {Magaldi, Danielle and Berler, Matthew},
+  editor = {{Zeigler-Hill}, Virgil and Shackelford, Todd K.},
+  year = {2020},
+  pages = {4825--4830},
+  publisher = {Springer International Publishing},
+  address = {Cham},
+  doi = {10.1007/978-3-319-24612-3_857},
+  urldate = {2024-09-05},
+  isbn = {978-3-319-24612-3},
+  langid = {english}
 }
 
 @article{malickiSystematicReviewMetaanalyses2021,
@@ -2819,6 +2863,13 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   file = {/Users/james/Zotero/storage/8HVYK5VN/Ramirez F. Daniel et al_2017_Methodological Rigor in Preclinical Cardiovascular Studies.pdf;/Users/james/Zotero/storage/RKUHUF93/CIRCRESAHA.117.html}
 }
 
+@misc{ReportingGuidelinesUsed,
+  title = {Reporting Guidelines Used Varying Methodology to Develop Recommendations - {{ScienceDirect}}},
+  urldate = {2024-08-23},
+  howpublished = {https://www-sciencedirect-com.ezproxy-prd.bodleian.ox.ac.uk/science/article/pii/S0895435623000690},
+  file = {/Users/james/Zotero/storage/ILABBQAP/S0895435623000690.html}
+}
+
 @article{rethlefsenPRISMASExtensionPRISMA2021,
   title = {{{PRISMA-S}}: An Extension to the {{PRISMA}} Statement for Reporting Literature Searches in Systematic Reviews},
   shorttitle = {{{PRISMA-S}}},
@@ -2872,6 +2923,29 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   file = {/Users/james/Zotero/storage/7ILHQTS3/jrsm.html}
 }
 
+@misc{RoleReflexivityFeminist,
+  title = {The Role of Reflexivity in Feminist Psychology - {{ScienceDirect}}},
+  urldate = {2024-08-23},
+  howpublished = {https://www-sciencedirect-com.ezproxy-prd.bodleian.ox.ac.uk/science/article/pii/0277539588900246?via\%3Dihub},
+  file = {/Users/james/Zotero/storage/DICDHRLR/0277539588900246.html}
+}
+
+@article{RoleReflexivityFeminist1988,
+  title = {The Role of Reflexivity in Feminist Psychology},
+  year = {1988},
+  month = jan,
+  journal = {Women's Studies International Forum},
+  volume = {11},
+  number = {5},
+  pages = {493--502},
+  publisher = {Pergamon},
+  issn = {0277-5395},
+  doi = {10.1016/0277-5395(88)90024-6},
+  urldate = {2024-08-23},
+  abstract = {The implications of a number of forms of reflexivity are explored for feminist work within psychology. ``Personal'' and ``functional'' reflexivity raise i{\dots}},
+  langid = {american}
+}
+
 @article{rosumeckValidationStudyRevealed2020,
   title = {A Validation Study Revealed Differences in Design and Performance of Search Filters for Qualitative Research in {{PsycINFO}} and {{CINAHL}}},
   author = {Rosumeck, Stefanie and Wagner, Mandy and Wallraf, Simon and Euler, Ulrike},
@@ -2888,6 +2962,18 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   langid = {english},
   pmid = {32987157},
   file = {/Users/james/Zotero/storage/SITA7HK4/Rosumeck et al_2020_A validation study revealed differences in design and performance of search.pdf;/Users/james/Zotero/storage/KGWATPGW/fulltext.html}
+}
+
+@book{s.lewis-beckSAGEEncyclopediaSocial2004,
+  title = {The {{SAGE Encyclopedia}} of {{Social Science Research Methods}}},
+  author = {{S.Lewis-Beck}, Michael and Bryman, Alan and Liao, Tim Futing},
+  year = {2004},
+  publisher = {Sage Publications, Inc.},
+  doi = {10.4135/9781412950589},
+  urldate = {2024-09-05},
+  abstract = {{$<$}p{$>$}This unique multi-volume reference set offers readers an all-encompassing education in the ways of social science researchers. Written to be accessible to ge},
+  isbn = {978-1-4129-5058-9},
+  langid = {english}
 }
 
 @article{santoMethodsResultsStudies2023,
@@ -3270,6 +3356,16 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Topor et al_2023_An integrative framework for planning and conducting Non-Intervention,.pdf}
 }
 
+@misc{UnsatisfactorySaturationCritical,
+  title = {`{{Unsatisfactory Saturation}}': A Critical Exploration of the Notion of Saturated Sample Sizes in Qualitative Research},
+  shorttitle = {`{{Unsatisfactory Saturation}}'},
+  doi = {10.1177/1468794112446106},
+  urldate = {2024-09-05},
+  howpublished = {https://journals.sagepub.com/doi/epdf/10.1177/1468794112446106?src=getftr},
+  langid = {english},
+  file = {/Users/james/Zotero/storage/WWP5XXJY/‘Unsatisfactory Saturation’ a critical exploratio.pdf}
+}
+
 @misc{UsageStatisticsMarket,
   title = {Usage {{Statistics}} and {{Market Share}} of {{Traffic Analysis Tools}} for {{Websites}}, {{July}} 2023},
   urldate = {2023-07-31},
@@ -3422,6 +3518,35 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   urldate = {2021-03-01},
   howpublished = {http://www.emro.who.int/e-library/imemr/index.html},
   file = {/Users/james/Zotero/storage/KC6V5CD4/index.html}
+}
+
+@article{wilkinsonRoleReflexivityFeminist1988,
+  title = {The Role of Reflexivity in Feminist Psychology},
+  author = {Wilkinson, Sue},
+  year = {1988},
+  month = jan,
+  journal = {Women's Studies International Forum},
+  volume = {11},
+  number = {5},
+  pages = {493--502},
+  issn = {0277-5395},
+  doi = {10.1016/0277-5395(88)90024-6},
+  urldate = {2024-08-27},
+  abstract = {The implications of a number of forms of reflexivity are explored for feminist work within psychology. ``Personal'' and ``functional'' reflexivity raise issues relating the identity of the researcher and the form/function of the research, while ``disciplinary'' reflexivity entails analysis of the nature and influence of the field of enquiry. It is argued that reflexivity, particularly of the disciplinary form, is a potentially powerful agent for change within traditional academic disciplines, such as psychology, in that it can be self-consciously applied to advance the feminist challenge.}
+}
+
+@book{woolgarKnowledgeReflexivityNew1988,
+  title = {Knowledge and Reflexivity:  {{New}} Frontiers in the Sociology of Knowledge},
+  shorttitle = {Knowledge and Reflexivity},
+  editor = {Woolgar, Steve},
+  year = {1988},
+  series = {Knowledge and Reflexivity:  {{New}} Frontiers in the Sociology of Knowledge},
+  pages = {x, 214},
+  publisher = {Sage Publications, Inc},
+  address = {Thousand Oaks, CA, US},
+  abstract = {Scholars working in the area broadly described as 'social studies of science' have convincingly demonstrated over the past decade that natural scientific knowledge is a product of social, cultural, historical, and political processes. The contributors to this volume argue that it is high time that social science itself was seen as an activity generated by those same forces. They show that our understanding of the social science text benefits from a heightened appreciation of reflexivity---at its simplest, a term which connotes self-reflection and self-referral. Nine chapters explore various kinds of reflexivity and examine its wide-ranging implications for ethnography, discourse analysis, textual analysis, medical sociology and sociology of science.  The authors are concerned to develop a practice in which the interrogation of the methods proceeds simultaneously with, and as a integral part of, the investigation of the object.  The book will make stimulating reading for all researchers within the social sciences as well as for philosophers and historians of science. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  isbn = {978-0-8039-8120-1},
+  keywords = {Conversation,Ethnography,Interpersonal Communication,Knowledge Level,Medical Sciences,Social Sciences,Sociology}
 }
 
 @article{yardleyPersonBasedApproachIntervention2015,
