--- a/index.qmd
+++ b/index.qmd
@@ -1,28 +1,1 @@
----
-format: 
-    html:
-        number-sections: false
----
-
-## Notes on this draft {.unnumbered}
-
-:::{.callout}
-Here is the working version of my thesis. 
-
-When opening in Word you'll get an error: 
-
-`This document contains fields that may refer to other files. Do you want to update the fields in this document?`
-
-Click Yes, then Update Entire Table. 
-
-Known todos:
-
-* Glossary
-
-#### Word Count Tallies: 
-
-Actual word count is ~15k lower as these numbers include references and appendices. 
-
-{{< include metadata/_wordcounts.qmd >}}
-
-:::
+{{< include chapters/1_introduction/index.qmd >}}
