--- a/_extensions/nmfs-opensci/quarto-thesis/partials/before-body.tex
+++ b/_extensions/nmfs-opensci/quarto-thesis/partials/before-body.tex
@@ -42,9 +42,9 @@ $endif$
 \vfill
 
 \large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
-\textit{in the}\\[0.4cm]
-\groupname\\
-\deptname\\[2cm] % Research group name and department name
+% \textit{in the}\\[0.4cm]
+% \groupname\\
+% \deptname\\[2cm] % Research group name and department name
  
 \vfill
 
