--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -1,3 +1,5 @@
-My capability, opportunity, and motivation to complete this thesis were strengthened by the support of many, and without them this journey would have been a lot harder.
+Many people influenced my capability, opportunity, and motivation throughout this adventure, and without them my journey would have been a lot harder.
 
-Thank you, then, to my supervisors Professor Gary Collins, Dr Charlotte Albury, Dr Jennifer de Beyer, and Dr Michael Schlüssel for giving me the tools I needed to explore new paths. Thank you to my colleagues Jacqueline, Patricia, and Shona for making me feel part of the team. Thank you, Caroline, for welcoming me to the world of reporting guidelines and always being ready to put the world to rights, and thank you to my family and partner for trusting me to follow my heart, head, and gut.
+Thank you, then, to my supervisors Professor Gary Collins, Dr Charlotte Albury, Dr Jennifer de Beyer, and Dr Michael Schlüssel for giving me the tools I needed to explore new paths. Thank you to my colleagues Jacqueline, Patricia, and Shona for making me feel part of the team. Thank you, Caroline, for welcoming me to the world of reporting guidelines and always being ready to put the world to rights, and thank you to my family and partner for encouraging me throughout this endeavour.
+
+Finally, thank you to Cancer Research UK for funding my research. 
