dealing with TODOs

--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -1,5 +1,5 @@
-Many people influenced my capability, opportunity, and motivation throughout this adventure, and without them my journey would have been a lot harder.
+Many people influenced my capability, opportunity, and motivation throughout my DPhil, and without them my journey would have been a lot harder.
 
-Thank you, then, to my supervisors Professor Gary Collins, Dr Charlotte Albury, Dr Jennifer de Beyer, and Dr Michael Schlüssel for giving me the tools I needed to explore new paths. Thank you to my colleagues Jacqueline, Patricia, and Shona for making me feel part of the team. Thank you, Caroline, for welcoming me to the world of reporting guidelines and always being ready to put the world to rights, and thank you to my family and partner for encouraging me throughout this endeavour.
+I am extremely grateful to Professor Gary Collins, Dr. Charlotte Albury, Dr. Jennifer de Beyer, and Dr. Michael Schlüssel for their expert supervision and for giving me the tools I needed to explore new paths. I would like to thank my colleagues Jacqueline, Patricia, Paula, and Shona for making me feel part of the team, and I'd like to thank Caroline for welcoming me to the world of reporting guidelines and always being ready to put the world to rights. I thank my family and partner for encouraging me throughout this endeavour, and for giving me the support and space to complete it.
 
-Finally, thank you to Cancer Research UK for funding my research. 
+Finally, I thank Cancer Research UK for funding my research. 
