fixes before submission

--- a/references.bib
+++ b/references.bib
@@ -2281,6 +2281,24 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   url = {www.behaviourchangewheel.com}
 }
 
+@article{michieDevelopingEvaluatingDigital2017,
+  title = {Developing and {{Evaluating Digital Interventions}} to {{Promote Behavior Change}} in {{Health}} and {{Health Care}}: {{Recommendations Resulting From}} an {{International Workshop}}},
+  shorttitle = {Developing and {{Evaluating Digital Interventions}} to {{Promote Behavior Change}} in {{Health}} and {{Health Care}}},
+  author = {Michie, Susan and Yardley, Lucy and West, Robert and Patrick, Kevin and Greaves, Felix},
+  year = {2017},
+  month = jun,
+  journal = {Journal of Medical Internet Research},
+  volume = {19},
+  number = {6},
+  pages = {e7126},
+  publisher = {JMIR Publications Inc., Toronto, Canada},
+  doi = {10.2196/jmir.7126},
+  urldate = {2024-10-30},
+  abstract = {Devices and programs using digital technology to foster or support behavior change (digital interventions) are increasingly ubiquitous, being adopted for use in patient diagnosis and treatment, self-management of chronic diseases, and in primary prevention. They have been heralded as potentially revolutionizing the ways in which individuals can monitor and improve their health behaviors and health care by improving outcomes, reducing costs, and improving the patient experience. However, we are still mainly in the age of promise rather than delivery. Developing and evaluating these digital interventions presents new challenges and new versions of old challenges that require use of improved and perhaps entirely new methods for research and evaluation. This article discusses these challenges and provides recommendations aimed at accelerating the rate of progress in digital behavior intervention research and practice. Areas addressed include intervention development in a rapidly changing technological landscape, promoting user engagement, advancing the underpinning science and theory, evaluating effectiveness and cost-effectiveness, and addressing issues of regulatory, ethical, and information governance. This article is the result of a two-day international workshop on how to create, evaluate, and implement effective digital interventions in relation to health behaviors. It was held in London in September 2015 and was supported by the United Kingdom's Medical Research Council (MRC), the National Institute for Health Research (NIHR), the Methodology Research Programme (PI Susan Michie), and the Robert Wood Johnson Foundation of the United States (PI Kevin Patrick). Important recommendations to manage the rapid pace of change include considering using emerging techniques from data science, machine learning, and Bayesian approaches and learning from other disciplines including computer science and engineering. With regard to assessing and promoting engagement, a key conclusion was that sustained engagement is not always required and that for each intervention it is useful to establish what constitutes ``effective engagement,'' that is, sufficient engagement to achieve the intended outcomes. The potential of digital interventions for testing and advancing theories of behavior change by generating ecologically valid, real-time objective data was recognized. Evaluations should include all phases of the development cycle, designed for generalizability, and consider new experimental designs to make the best use of rich data streams. Future health economics analyses need to recognize and model the complex and potentially far-reaching costs and benefits of digital interventions. In terms of governance, developers of digital behavior interventions should comply with existing regulatory frameworks, but with consideration for emerging standards around information governance, ethics, and interoperability.},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Michie et al_2017_Developing and Evaluating Digital Interventions to Promote Behavior Change in.pdf}
+}
+
 @article{michieMakingPsychologicalTheory2005,
   title = {Making Psychological Theory Useful for Implementing Evidence Based Practice: A Consensus Approach},
   shorttitle = {Making Psychological Theory Useful for Implementing Evidence Based Practice},
@@ -2910,6 +2928,18 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   abstract = {Rationale:Methodological sources of bias and suboptimal reporting contribute to irreproducibility in preclinical science and may negatively affect research translation. Randomization, blinding, sample size estimation, and considering sex as a biological variable are deemed crucial study design elements to maximize the quality and predictive value of preclinical experiments.Objective:To examine the prevalence and temporal patterns of recommended study design element implementation in preclinical cardiovascular research.Methods and Results:All articles published over a 10-year period in 5 leading cardiovascular journals were reviewed. Reports of in vivo experiments in nonhuman mammals describing pathophysiology, genetics, or therapeutic interventions relevant to specific cardiovascular disorders were identified. Data on study design and animal model use were collected. Citations at 60 months were additionally examined as a surrogate measure of research impact in a prespecified subset of studies, stratified by individual and cumulative study design elements. Of 28\,636 articles screened, 3396 met inclusion criteria. Randomization was reported in 21.8\%, blinding in 32.7\%, and sample size estimation in 2.3\%. Temporal and disease-specific analyses show that the implementation of these study design elements has overall not appreciably increased over the past decade, except in preclinical stroke research, which has uniquely demonstrated significant improvements in methodological rigor. In a subset of 1681 preclinical studies, randomization, blinding, sample size estimation, and inclusion of both sexes were not associated with increased citations at 60 months.Conclusions:Methodological shortcomings are prevalent in preclinical cardiovascular research, have not substantially improved over the past 10 years, and may be overlooked when basing subsequent studies. Resultant risks of bias and threats to study validity have the potential to hinder progress in cardiovascular medicine as preclinical research often precedes and informs clinical trials. Stroke research quality has uniquely improved in recent years, warranting a closer examination for interventions to model in other cardiovascular fields.},
   keywords = {_tablet},
   file = {/Users/james/Zotero/storage/8HVYK5VN/Ramirez F. Daniel et al_2017_Methodological Rigor in Preclinical Cardiovascular Studies.pdf;/Users/james/Zotero/storage/RKUHUF93/CIRCRESAHA.117.html}
+}
+
+@misc{RepresentationBehaviourChange2020,
+  title = {Representation of Behaviour Change Interventions and Their ...},
+  year = {2020},
+  month = jun,
+  journal = {Wellcome Open Research {\textbar} Open Access Publishing Platform},
+  doi = {10.12688/wellcomeopenres.15902.2},
+  urldate = {2024-10-31},
+  abstract = {Read the latest article version by Susan Michie, Robert West, Ailbhe N. Finnerty, Emma Norris, Alison J. Wright, Marta M. Marques, Marie Johnston, Michael P. ...},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/2020_Representation of behaviour change interventions and their.pdf}
 }
 
 @article{rethlefsenPRISMASExtensionPRISMA2021,
